--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -31,7 +31,7 @@
 <body style=" font-family: 'ui-sans-serif','serif';">
 <div class="wrapper " data-color="purple" data-background-color="black">
     <div class="sidebar" data-color="purple" data-background-color="black"
-         data-image="{% static 'Dashboard/assets/img/sidebar-1.jpg' %}">
+         data-image="{% static 'Dashboard/assets/img/sidebar-1.jpeg' %}">
         <!--
           Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
