--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -9,16 +9,15 @@
 
 {% block content %}
     <div class="d-flex justify-content-center align-items-center">
-        <div class="card bg-light" >
+        <div class="card bg-light">
             <div class="header header-primary text-center">
                 <h4 class="card-title text-light">Log in</h4>
 
                 {% get_providers as socialaccount_providers %}
 
                 {% if socialaccount_providers %}
-                    <p class="mx-auto col-6  text-light font-italic">{% blocktrans with site.name as site_name %}Please sign in with
-                        one
-                        of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+                    <p class="mx-auto col-6  text-light font-italic">{% blocktrans with site.name as site_name %}Please
+                        sign in Or <a href="{{ signup_url }}">sign up</a>
                         for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
                     <div class="socialaccount_ballot mx-auto col-6">
@@ -34,15 +33,17 @@
                     {% include "socialaccount/snippets/login_extra.html" %}
 
                 {% else %}
-                    <p class="mx-auto col-12 text-capitalize ">{% blocktrans %}If you have not created an account yet, then
+                    <p class="mx-auto col-12 text-capitalize ">{% blocktrans %}If you have not created an account yet,
+                        then
                         please
                         <a href="{{ signup_url }}" style="color: rgba(12,115,250,0.76) !important;">sign up</a>
                         first.{% endblocktrans %}</p>
                 {% endif %}
 
             </div>
-            <div class="card-content pl-3 pb-3 " >
-                <form class="login col-12 offset-3 form-group text-capitalize" method="POST" action="{% url 'account_login' %}">
+            <div class="card-content pl-3 pb-3 ">
+                <form class="login col-12 offset-3 form-group text-capitalize" method="POST"
+                      action="{% url 'account_login' %}">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-11 text-capitalize" style="">
