--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -38,9 +38,9 @@
           Tip 2: you can also add an image using data-image tag
       -->
         <div class="logo">
-            <a href="#" class="simple-text logo-normal">
-                {{ website_name }}
-            </a></div>
+            <h4> <a href="#" class="simple-text logo-normal pl-2">
+               {{ website_name }}
+            </a> </h4></div>
         <div class="sidebar-wrapper">
             <div class="user">
                 <div class="photo">
