--- a/templates/portfolio/portfolio_v1/about.html
+++ b/templates/portfolio/portfolio_v1/about.html
@@ -7,8 +7,8 @@
 
             <!-- column 1 starts -->
             <div class="col-12 col-md-6 small-device-space">
-                <div class="dtr-pr-30"><img src="{{ layout.profilePicsImageURL }}" alt="image"></div>
-                {#                <div class="dtr-pr-30"><img src="{% static 'portfolio_v4/assets/images/personal_img.png' %}" alt="image"></div>#}
+                <div class="dtr-pr-30"><img src="{{ layout.profilePicsImageURL }}"
+                                            alt="image" style="border-radius: 80%"></div>
             </div>
             <!-- column 1 ends -->
 
