--- a/templates/dashboard/blog_update.html
+++ b/templates/dashboard/blog_update.html
@@ -45,7 +45,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    {% for item in post %}
+                                    {% for item in posts %}
                                         <tr>
                                             <td>
                                                 <div class="img-container">
@@ -90,26 +90,17 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="alert alert-warning">
-                        <div class="container">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true"><i class="material-icons">❌</i></span>
-                            </button>
-                            <b>Note:</b> The blogpost you are writing would be read before it can be published
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
 
                     <div class="card">
                         <div class="card-header card-header-primary card-header-text">
                             <div class="card-text">
-                                <h4 class="card-title">Create Post</h4>
+                                <h4 class="card-title">Edit Post</h4>
                             </div>
                         </div>
                         <div class="card-content">
 
-                            <form action="{% url 'blog:blog_create' %}" method="post" enctype="multipart/form-data">
+                            <form action="{% url 'blog:update_post' post.slug %}" method="post"
+                                  enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="col-12">
                                     <div class="row">
@@ -149,7 +140,7 @@
                                     {{ form.description }}
                                 </div>
 
-                                <button class="float-right btn btn-primary float-left ">Create</button>
+                                <button class="float-right btn btn-primary float-left ">Update</button>
 
                             </form>
                         </div>
