--- a/templates/HomePage/blog/blog-single.html
+++ b/templates/HomePage/blog/blog-single.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <!-- Breadcrumbs -->
-    <div class="breadcrumbs" style="background-image:url({% static  'HomePage/img/breadcrumbs-bg.jpg' %})">
+    <div class="breadcrumbs" style="background-image:url({% static  'HomePage/img/breadcrumbs.jpg' %})">
         <div class="container">
             <div class="row">
                 <!-- Breadcrumbs-Content -->
@@ -83,14 +83,14 @@
                                                 <div class="blog-share share-tag">
                                                     <h5>Share Now</h5>
                                                     <ul>
-                                                        <li><a href="{{ facebook_url }}"><i class="fa fa-facebook"></i></a>
+                                                        <li><a href="{{ facebook_url }}"><i class="fab fa-facebook"></i></a>
                                                         </li>
                                                         <li><a href="{{ twitter_url }}"><i
-                                                                class="fa fa-twitter"></i></a></li>
+                                                                class="fab fa-twitter"></i></a></li>
                                                         <li><a href="{{ linkedin_url }}"><i class="fa fa-linkedin"></i></a>
                                                         </li>
                                                         <li><a href="{{ instagram_url }}"><i
-                                                                class="fa fa-instagram"></i></a></li>
+                                                                class="fab fa-instagram"></i></a></li>
 
 
                                                     </ul>
@@ -111,9 +111,9 @@
                                     </div>
                                     <div class="author-social">
                                         <ul>
-                                            <li><a href="{{ facebook_url }}"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a href="{{ twitter_url }}"><i class="fa fa-twitter"></i></a></li>
-                                            <li><a href="{{ instagram_url }}"><i class="fa fa-linkedin"></i></a></li>
+                                            <li><a href="{{ facebook_url }}"><i class="fab fa-facebook"></i></a></li>
+                                            <li><a href="{{ twitter_url }}"><i class="fab fa-twitter"></i></a></li>
+                                            <li><a href="{{ instagram_url }}"><i class="fab fa-linkedin"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
