--- a/templates/HomePage/faq.html
+++ b/templates/HomePage/faq.html
@@ -11,7 +11,7 @@
 {% block faq %}  {% endblock  %}
 {% block content %}
     <!-- Breadcrumbs -->
-    <div class="breadcrumbs" style="background-image:url({% static 'HomePage/img/breadcrumbs-bg.jpg' %})">
+    <div class="breadcrumbs" style="background-image:url({% static 'HomePage/img/breadcrumbs.jpg' %})">
         <div class="container">
             <div class="row">
                 <!-- Breadcrumbs-Content -->
@@ -420,7 +420,7 @@
                                     <div class="faq-heading" id="FaqTitle9">
                                         <h4 class="faq-title">
                                             <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
-                                               href="#faq9"><span>9</span>How to writing blog posts</a>
+                                               href="#faq9"><span>9</span>How to write blog posts</a>
                                         </h4>
                                     </div>
                                     <div id="faq9" class="panel-collapse collapse" role="tabpanel"
