--- a/templates/portfolio/portfolio_v3/resume.html
+++ b/templates/portfolio/portfolio_v3/resume.html
@@ -3,7 +3,7 @@
 
     <!-- section TITLE -->
     <div class="sectionTitle">
-        <h1>Resume {{ primary_color_rgba }}</h1>
+        <h1>Resume </h1>
         <h6 class="whiteTitle ">More about my past</h6>
     </div>
 
