--- a/templates/HomePage/index.html
+++ b/templates/HomePage/index.html
@@ -14,7 +14,7 @@
     <section class="hero-area">
         <div class="hero-slider">
             <!-- Single Slider -->
-            <div class="single-slider" style="background-image:url('{% static "HomePage/img/hero-bg-1.jpg" %}')">
+            <div class="single-slider" style="background-image:url('{% static "HomePage/img/background-1.jpg" %}')">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-8 col-12">
@@ -46,7 +46,7 @@
             </div>
             <!-- End Single Slider -->
             <!-- Single Slider -->
-            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/hero-bg-3.jpg' %}')">
+            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/background-3.jpg' %}')">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-8 col-12">
@@ -78,7 +78,7 @@
             </div>
             <!-- End Single Slider -->
             <!-- Single Slider -->
-            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/hero-bg-3.jpg' %}')">
+            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/background-2.jpg' %}')">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-8 col-12">
