--- a/templates/dashboard/blog_update.html
+++ b/templates/dashboard/blog_update.html
@@ -123,7 +123,7 @@
                                             <label for="id_published_date">
                                                 Published Date
                                             </label><input type="datetime-local" class="form-control"
-                                                           name="published_date"
+                                                           name="published_date" value="{{ post.published_date }}"
                                                            id="id_published_date">
 
                                         </div>
