--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -24,6 +24,11 @@
         {% endblock title %}
     </title>
     <link href="{% static 'Dashboard/assets/css/material-dashboard.css' %}" rel="stylesheet"/>
+    <style>
+        .navbar.navbar-transparent .navbar-toggler .navbar-toggler-icon {
+            background-color: #ffffff !important;
+        }
+    </style>
     {% block style %}
 
     {% endblock %}
@@ -34,9 +39,9 @@
          data-image="{% static 'Dashboard/assets/img/sidebar-1.jpeg' %}">
 
         <div class="logo">
-            <h4> <a href="#" class="simple-text logo-normal pl-2">
-               {{ website_name }}
-            </a> </h4></div>
+            <h4><a href="#" class="simple-text logo-normal pl-2">
+                {{ website_name }}
+            </a></h4></div>
         <div class="sidebar-wrapper">
             <div class="user">
                 <div class="photo">
@@ -263,171 +268,171 @@
 
 {% endblock %}
 <script>
-    $ (document).ready (function () {
-        $ ().ready (function () {
-            $sidebar = $ ('.sidebar');
+    $(document).ready(function () {
+        $().ready(function () {
+            $sidebar = $('.sidebar');
 
-            $sidebar_img_container = $sidebar.find ('.sidebar-background');
+            $sidebar_img_container = $sidebar.find('.sidebar-background');
 
-            $full_page = $ ('.full-page');
+            $full_page = $('.full-page');
 
-            $sidebar_responsive = $ ('body > .navbar-collapse');
+            $sidebar_responsive = $('body > .navbar-collapse');
 
-            window_width = $ (window).width ();
+            window_width = $(window).width();
 
-            fixed_plugin_open = $ ('.sidebar .sidebar-wrapper .nav li.active a p').html ();
+            fixed_plugin_open = $('.sidebar .sidebar-wrapper .nav li.active a p').html();
 
             if (window_width > 767 && fixed_plugin_open == 'Dashboard') {
-                if ($ ('.fixed-plugin .dropdown').hasClass ('show-dropdown')) {
-                    $ ('.fixed-plugin .dropdown').addClass ('open');
+                if ($('.fixed-plugin .dropdown').hasClass('show-dropdown')) {
+                    $('.fixed-plugin .dropdown').addClass('open');
                 }
 
             }
 
-            $ ('.fixed-plugin a').click (function (event) {
+            $('.fixed-plugin a').click(function (event) {
                 // Alex if we click on switch, stop propagation of the event, so the dropdown will not be hide, otherwise we set the  section active
-                if ($ (this).hasClass ('switch-trigger')) {
+                if ($(this).hasClass('switch-trigger')) {
                     if (event.stopPropagation) {
-                        event.stopPropagation ();
+                        event.stopPropagation();
                     } else if (window.event) {
                         window.event.cancelBubble = true;
                     }
                 }
             });
 
-            $ ('.fixed-plugin .active-color span').click (function () {
-                $full_page_background = $ ('.full-page-background');
+            $('.fixed-plugin .active-color span').click(function () {
+                $full_page_background = $('.full-page-background');
 
-                $ (this).siblings ().removeClass ('active');
-                $ (this).addClass ('active');
+                $(this).siblings().removeClass('active');
+                $(this).addClass('active');
 
-                var new_color = $ (this).data ('color');
+                var new_color = $(this).data('color');
 
                 if ($sidebar.length != 0) {
-                    $sidebar.attr ('data-color' , new_color);
+                    $sidebar.attr('data-color', new_color);
                 }
 
                 if ($full_page.length != 0) {
-                    $full_page.attr ('filter-color' , new_color);
+                    $full_page.attr('filter-color', new_color);
                 }
 
                 if ($sidebar_responsive.length != 0) {
-                    $sidebar_responsive.attr ('data-color' , new_color);
+                    $sidebar_responsive.attr('data-color', new_color);
                 }
             });
 
-            $ ('.fixed-plugin .background-color .badge').click (function () {
-                $ (this).siblings ().removeClass ('active');
-                $ (this).addClass ('active');
+            $('.fixed-plugin .background-color .badge').click(function () {
+                $(this).siblings().removeClass('active');
+                $(this).addClass('active');
 
-                var new_color = $ (this).data ('background-color');
+                var new_color = $(this).data('background-color');
 
                 if ($sidebar.length != 0) {
-                    $sidebar.attr ('data-background-color' , new_color);
+                    $sidebar.attr('data-background-color', new_color);
                 }
             });
 
-            $ ('.fixed-plugin .img-holder').click (function () {
-                $full_page_background = $ ('.full-page-background');
+            $('.fixed-plugin .img-holder').click(function () {
+                $full_page_background = $('.full-page-background');
 
-                $ (this).parent ('li').siblings ().removeClass ('active');
-                $ (this).parent ('li').addClass ('active');
+                $(this).parent('li').siblings().removeClass('active');
+                $(this).parent('li').addClass('active');
 
 
-                var new_image = $ (this).find ("img").attr ('src');
+                var new_image = $(this).find("img").attr('src');
 
-                if ($sidebar_img_container.length != 0 && $ ('.switch-sidebar-image input:checked').length != 0) {
-                    $sidebar_img_container.fadeOut ('fast' , function () {
-                        $sidebar_img_container.css ('background-image' , 'url("' + new_image + '")');
-                        $sidebar_img_container.fadeIn ('fast');
+                if ($sidebar_img_container.length != 0 && $('.switch-sidebar-image input:checked').length != 0) {
+                    $sidebar_img_container.fadeOut('fast', function () {
+                        $sidebar_img_container.css('background-image', 'url("' + new_image + '")');
+                        $sidebar_img_container.fadeIn('fast');
                     });
                 }
 
-                if ($full_page_background.length != 0 && $ ('.switch-sidebar-image input:checked').length != 0) {
-                    var new_image_full_page = $ ('.fixed-plugin li.active .img-holder').find ('img').data ('src');
+                if ($full_page_background.length != 0 && $('.switch-sidebar-image input:checked').length != 0) {
+                    var new_image_full_page = $('.fixed-plugin li.active .img-holder').find('img').data('src');
 
-                    $full_page_background.fadeOut ('fast' , function () {
-                        $full_page_background.css ('background-image' , 'url("' + new_image_full_page + '")');
-                        $full_page_background.fadeIn ('fast');
+                    $full_page_background.fadeOut('fast', function () {
+                        $full_page_background.css('background-image', 'url("' + new_image_full_page + '")');
+                        $full_page_background.fadeIn('fast');
                     });
                 }
 
-                if ($ ('.switch-sidebar-image input:checked').length == 0) {
-                    var new_image = $ ('.fixed-plugin li.active .img-holder').find ("img").attr ('src');
-                    var new_image_full_page = $ ('.fixed-plugin li.active .img-holder').find ('img').data ('src');
+                if ($('.switch-sidebar-image input:checked').length == 0) {
+                    var new_image = $('.fixed-plugin li.active .img-holder').find("img").attr('src');
+                    var new_image_full_page = $('.fixed-plugin li.active .img-holder').find('img').data('src');
 
-                    $sidebar_img_container.css ('background-image' , 'url("' + new_image + '")');
-                    $full_page_background.css ('background-image' , 'url("' + new_image_full_page + '")');
+                    $sidebar_img_container.css('background-image', 'url("' + new_image + '")');
+                    $full_page_background.css('background-image', 'url("' + new_image_full_page + '")');
                 }
 
                 if ($sidebar_responsive.length != 0) {
-                    $sidebar_responsive.css ('background-image' , 'url("' + new_image + '")');
+                    $sidebar_responsive.css('background-image', 'url("' + new_image + '")');
                 }
             });
 
-            $ ('.switch-sidebar-image input').change (function () {
-                $full_page_background = $ ('.full-page-background');
+            $('.switch-sidebar-image input').change(function () {
+                $full_page_background = $('.full-page-background');
 
-                $input = $ (this);
+                $input = $(this);
 
-                if ($input.is (':checked')) {
+                if ($input.is(':checked')) {
                     if ($sidebar_img_container.length != 0) {
-                        $sidebar_img_container.fadeIn ('fast');
-                        $sidebar.attr ('data-image' , '#');
+                        $sidebar_img_container.fadeIn('fast');
+                        $sidebar.attr('data-image', '#');
                     }
 
                     if ($full_page_background.length != 0) {
-                        $full_page_background.fadeIn ('fast');
-                        $full_page.attr ('data-image' , '#');
+                        $full_page_background.fadeIn('fast');
+                        $full_page.attr('data-image', '#');
                     }
 
                     background_image = true;
                 } else {
                     if ($sidebar_img_container.length != 0) {
-                        $sidebar.removeAttr ('data-image');
-                        $sidebar_img_container.fadeOut ('fast');
+                        $sidebar.removeAttr('data-image');
+                        $sidebar_img_container.fadeOut('fast');
                     }
 
                     if ($full_page_background.length != 0) {
-                        $full_page.removeAttr ('data-image' , '#');
-                        $full_page_background.fadeOut ('fast');
+                        $full_page.removeAttr('data-image', '#');
+                        $full_page_background.fadeOut('fast');
                     }
 
                     background_image = false;
                 }
             });
 
-            $ ('.switch-sidebar-mini input').change (function () {
-                $body = $ ('body');
+            $('.switch-sidebar-mini input').change(function () {
+                $body = $('body');
 
-                $input = $ (this);
+                $input = $(this);
 
                 if (md.misc.sidebar_mini_active == true) {
-                    $ ('body').removeClass ('sidebar-mini');
+                    $('body').removeClass('sidebar-mini');
                     md.misc.sidebar_mini_active = false;
 
-                    $ ('.sidebar .sidebar-wrapper, .main-panel').perfectScrollbar ();
+                    $('.sidebar .sidebar-wrapper, .main-panel').perfectScrollbar();
 
                 } else {
 
-                    $ ('.sidebar .sidebar-wrapper, .main-panel').perfectScrollbar ('destroy');
+                    $('.sidebar .sidebar-wrapper, .main-panel').perfectScrollbar('destroy');
 
-                    setTimeout (function () {
-                        $ ('body').addClass ('sidebar-mini');
+                    setTimeout(function () {
+                        $('body').addClass('sidebar-mini');
 
                         md.misc.sidebar_mini_active = true;
-                    } , 300);
+                    }, 300);
                 }
 
                 // we simulate the window Resize so the charts will get updated in realtime.
-                var simulateWindowResize = setInterval (function () {
-                    window.dispatchEvent (new Event ('resize'));
-                } , 180);
+                var simulateWindowResize = setInterval(function () {
+                    window.dispatchEvent(new Event('resize'));
+                }, 180);
 
                 // we stop the simulation of Window Resize after the animations are completed
-                setTimeout (function () {
-                    clearInterval (simulateWindowResize);
-                } , 1000);
+                setTimeout(function () {
+                    clearInterval(simulateWindowResize);
+                }, 1000);
 
             });
         });
