--- a/templates/HomePage/index.html
+++ b/templates/HomePage/index.html
@@ -14,13 +14,15 @@
     <section class="hero-area">
         <div class="hero-slider">
             <!-- Single Slider -->
-            <div class="single-slider" style="background-image:url('{% static "HomePage/img/background-1.jpg" %}')">
+            <div class="single-slider" style="background-image:url('{% static "HomePage/img/carousel_image1.jpg" %}')">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-8 col-12">
                             <div class="hero-content">
-                                <h1 class="text-capitalize">The Best Solutions to Start Your Own Business</h1>
-                                <p class="text-capitalize">Create your portfolio now for free with our free plans and
+                                <h1 class="text-capitalize text-light">The Best Solutions to Start Your Own
+                                    Business</h1>
+                                <p class="text-capitalize text-light">Create your portfolio now for free with our free
+                                    plans and
                                     become a website owner</p>
                                 <!-- Slider Button -->
                                 <div class="button">
@@ -46,7 +48,7 @@
             </div>
             <!-- End Single Slider -->
             <!-- Single Slider -->
-            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/background-3.jpg' %}')">
+            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/carousel_image2.jpg' %}')">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-8 col-12">
@@ -78,13 +80,14 @@
             </div>
             <!-- End Single Slider -->
             <!-- Single Slider -->
-            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/background-2.jpg' %}')">
+            <div class="single-slider" style="background-image:url('{% static 'HomePage/img/carousel_image3.jpg' %}')">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-8 col-12">
                             <div class="hero-content">
-                                <h1 class="text-capitalize">We provide website for any type of business.</h1>
-                                <p class="text-capitalize">Get your own website and choose from our templates</p>
+                                <h1 class="text-capitalize text-light">We provide website for any type of business.</h1>
+                                <p class="text-capitalize text-light">Get your own website and choose from our
+                                    templates</p>
                                 <!-- Slider Button -->
                                 <div class="button">
                                     <a href="{% url 'dashboard:dashboard' %}" class="theme-btn">Get Started</a>
