--- a/templates/dashboard/documentation.html
+++ b/templates/dashboard/documentation.html
@@ -19,7 +19,7 @@
                     because that is what we use to identify your portfolio and you have for example if your username is
                     <strong>username</strong> then your portfolio
                     url which would be the public one you can share to any one would be a
-                    <span class="text-primary">https://username.{{ website_name }}.com</span> the {{ website_name }} is the default
+                    <span class="text-primary">https://username.{{ website_name }}.studio</span> the {{ website_name }} is the default
                      portfolio url
                     you also have access to changing you first name ,last name and email any time you want but please do
                     it
