--- a/templates/HomePage/include/about_include.html
+++ b/templates/HomePage/include/about_include.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-6 col-md-6 col-12 wow fadeInLeft" data-wow-duration="1s">
                     <!-- About image -->
                     <div class="about-img">
-                        <img src="{% static 'HomePage/img/about-img.png' %}" alt="#">
+                        <img src="{% static 'HomePage/img/about-img.jpg' %}" alt="#">
                         <div class="activity"><span>500+</span> Templates</div>
                     </div>
                     <!-- End About image -->
