--- a/templates/dashboard/blog_create.html
+++ b/templates/dashboard/blog_create.html
@@ -5,12 +5,12 @@
 {% block style %}
     {{ form.media }}
     <style>
-        .wmd-panel {
-            margin-left: 0% !important;;
-            margin-right: 0% !important;;
-            width: 100% !important;
-            min-width: 500px !important;;
-        }
+        {#.wmd-panel {#}
+        {#    margin-left: 0% !important;;#}
+        {#    margin-right: 0% !important;;#}
+        {#    width: 100% !important;#}
+        {#    min-width: 500px !important;;#}
+        {#}#}
     </style>
 {% endblock style %}
 
