--- a/templates/dashboard/blog_update.html
+++ b/templates/dashboard/blog_update.html
@@ -11,6 +11,15 @@
             width: 100% !important;
             min-width: 500px !important;;
         }
+
+        .wmd-button > span {
+            background-image: url('//cdn.rawgit.com/derobins/wmd/master/images/wmd-buttons.png');
+            background-repeat: no-repeat;
+            background-position: 0px 0px;
+            width: 20px;
+            height: 20px;
+            display: inline-block;
+        }
     </style>
 {% endblock style %}
 
