--- a/templates/dashboard/blog_create.html
+++ b/templates/dashboard/blog_create.html
@@ -5,12 +5,21 @@
 {% block style %}
     {{ form.media }}
     <style>
-        {#.wmd-panel {#}
-        {#    margin-left: 0% !important;;#}
-        {#    margin-right: 0% !important;;#}
-        {#    width: 100% !important;#}
-        {#    min-width: 500px !important;;#}
-        {#}#}
+        .wmd-panel {
+            margin-left: 0% !important;;
+            margin-right: 0% !important;;
+            width: 100% !important;
+            min-width: 500px !important;;
+        }
+
+        .wmd-button > span {
+            background-image: url('//cdn.rawgit.com/derobins/wmd/master/images/wmd-buttons.png');
+            background-repeat: no-repeat;
+            background-position: 0px 0px;
+            width: 20px;
+            height: 20px;
+            display: inline-block;
+        }
     </style>
 {% endblock style %}
 
