--- a/templates/HomePage/blog/blog-single.html
+++ b/templates/HomePage/blog/blog-single.html
@@ -4,7 +4,8 @@
 
 
 {% block style %}
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8515488467518904"
+            crossorigin="anonymous"></script>
 {% endblock %}
 
 
