--- a/templates/HomePage/blog/blog_user.html
+++ b/templates/HomePage/blog/blog_user.html
@@ -1,8 +1,10 @@
 {% extends 'HomePage/base/home_base.html' %}
 {% load static %}
 
-
-
+{% block style %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8515488467518904"
+            crossorigin="anonymous"></script>
+{% endblock %}
 
 {% block title %}
     Blog
