--- a/templates/HomePage/base/home_base.html
+++ b/templates/HomePage/base/home_base.html
@@ -10,7 +10,8 @@
     <meta name='copyright' content='bonik'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'Dashboard/assets/img/logo.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'Dashboard/assets/img/logo.png' %}">
     <!-- Site Title -->
     <title>
         {% block title %}
@@ -18,7 +19,7 @@
         {% endblock %}
     </title>
     <!-- Fav Icon -->
-    <link rel="icon" type="img/favicon.png' %}" href="{% static 'HomePage/img/favicon.png' %}">
+    <link rel="icon" type="img/favicon.png' %}" href="{% static 'Dashboard/assets/img/logo.png' %}">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,800;1,900&display=swap"
