--- a/templates/HomePage/blog/blog.html
+++ b/templates/HomePage/blog/blog.html
@@ -2,7 +2,10 @@
 {% load static %}
 
 
-
+{% block style %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8515488467518904"
+            crossorigin="anonymous"></script>
+{% endblock %}
 
 {% block title %}
     Blog
