--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -4,8 +4,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'Dashboard/assets/img/apple-icon.png' %}">
-    <link rel="icon" type="image/png" href="{% static 'Dashboard/assets/img/apple-icon.png' %}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'Dashboard/assets/img/logo.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'Dashboard/assets/img/logo.png' %}">
     <meta charset="UTF-8">
     <meta name="author" content="Nile-Theme">
     <meta name="robots" content="index follow">
@@ -15,6 +15,8 @@
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:800%7CPoppins:300i,300,400,500,600,700,400i,500%7CPlayfair+Display:400,700,900"
           rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     {% fontawesome_5_static %}
 
