--- a/templates/portfolio/portfolio_v1/portfolio_v1.html
+++ b/templates/portfolio/portfolio_v1/portfolio_v1.html
@@ -7,19 +7,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <title>{{ profile.user.username|capfirst }} || Portfolio</title>
+    <title>{{ profile.user.username|capfirst }} || {{ website_name }}</title>
     <meta name="author" content="tansh">
     <meta name="description" content="HTML Teamplate">
     <meta name="keywords" content="agency, personal, photography, one page">
-
+<meta name="google-site-verification" content="h0v-Vkdei6i7l8oxvNfayT7dEQQTw9g44R9yRlZq-mM" />
     <!-- FAVICON FILES -->
-    <link href="{% static 'portfolio/portfolio_v1/assets/images/icons/apple-touch-icon-144-precomposed.png' %}"
-          rel="apple-touch-icon" sizes="144x144">
-    <link href="{% static 'portfolio/portfolio_v1/assets/images/icons/apple-touch-icon-120-precomposed.png' %}"
-          rel="apple-touch-icon" sizes="120x120">
-    <link href="{% static 'portfolio/portfolio_v1/assets/images/icons/apple-touch-icon-76-precomposed.png' %}"
-          rel="apple-touch-icon" sizes="76x76">
-    <link href="{% static 'portfolio/portfolio_v1/assets/images/icons/favicon.png" rel="shortcut icon' %}">
 
     <!-- CSS FILES -->
     <link rel="stylesheet" href="{% static 'portfolio/portfolio_v1/assets/css/bootstrap.min.css' %}">
