--- a/templates/portfolio/portfolio_v2/portfolio_v2.html
+++ b/templates/portfolio/portfolio_v2/portfolio_v2.html
@@ -9,7 +9,7 @@
     ================================================== -->
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-
+<meta name="google-site-verification" content="h0v-Vkdei6i7l8oxvNfayT7dEQQTw9g44R9yRlZq-mM" />
     <!-- Specific Meta
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
