--- a/templates/HomePage/base/home_base.html
+++ b/templates/HomePage/base/home_base.html
@@ -6,6 +6,7 @@
 
     <!-- Meta Tag -->
     <meta charset="utf-8">
+<meta name="google-site-verification" content="h0v-Vkdei6i7l8oxvNfayT7dEQQTw9g44R9yRlZq-mM" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name='copyright' content='bonik'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
