--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -11,7 +11,7 @@
     <link href="images/favicon.png" rel="icon"/>
     <meta name="description" content="Login and Register Form Html Template">
     <meta name="author" content="harnishdesign.net">
-
+<meta name="google-site-verification" content="h0v-Vkdei6i7l8oxvNfayT7dEQQTw9g44R9yRlZq-mM" />
     <!-- Web Fonts
     ========================= -->
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900'
