--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -12,6 +12,7 @@
     <meta name="googlebot" content="index follow">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="h0v-Vkdei6i7l8oxvNfayT7dEQQTw9g44R9yRlZq-mM" />
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:800%7CPoppins:300i,300,400,500,600,700,400i,500%7CPlayfair+Display:400,700,900"
           rel="stylesheet">
