--- a/templates/portfolio/portfolio_v3/portfolio_v3.html
+++ b/templates/portfolio/portfolio_v3/portfolio_v3.html
@@ -15,7 +15,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <title>{{ profile.user.username }} </title>
     {% fontawesome_5_static %}
-
+    <meta name="google-site-verification" content="h0v-Vkdei6i7l8oxvNfayT7dEQQTw9g44R9yRlZq-mM"/>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Tangerine:400,700' rel='stylesheet' type='text/css'>
